# git-writing

./: .gitignore  README.md  abstract.yaml  body.md  build.sh  metadata.yaml  references.bib  setup.cfg  thanks.yaml
files/: article.latex
git_writing/: build.py  init.py
git_writing/assets/templates/article/: authors.yaml  template.tex
