[metadata]
name = git-writing
version = 0.0.1
author = Eric Robsky Huntley
author_email = ehuntley@mit.edu
description = "Accomplishes a number of the tedious, tedious tasks associated with reproducible and version-controlled academic writing."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/ericrobskyhuntley/git-writing
project_urls =
    Bug Tracker = https://gitlab.com/ericrobskyhuntley/git-writing/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *.csl, *.yaml, *.tex, *.md


[options.packages.find]
where = src